[tool.poetry]
name = "graph"
version = "0.1.0"
description = ""
authors = ["Ziloka <50429450+ziloka@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
pandas = "^2.0.3"
matplotlib = "^3.7.2"

# [tool.poetry.group.dev.dependencies]
pyarrow = "^15.0.0"
numpy = "^1.26.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
